<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">一卡通</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">用户名：</string>
    <string name="passwd">密    码：</string>
    <string name="username_hint">请输入用户名</string>
    <string name="pswd_hint">请输入密码</string>
    <string name="login_btn">登录</string>
    <string name="input_error">用户名或密码不能为空</string>
    <string name="input_error1">用户名或密码错误</string>
    <string name="title_activity_query">QueryActivity</string>
    <string name="query_hint1">请输入员工姓名</string>
    <string name="query_btn_text">查询</string>
    <string name="title_activity_update_privilege">UpdatePrivilegeActivity</string>

</resources>
